tests/NormalTests/paczka1/small_fuzzy/18875296.err
Error in line 1: 1XL3d S775 99,3
Error in line 9: WEfCJL4C9 S1 32,1
Error in line 10: WEfCJL4C9 S763 57,2
